# http_loggo_rs

./: Cargo.toml  Dockerfile  http_loggo.service
src/: main.rs
src/htpasswd/: md5.rs  mod.rs
