[package]
name = "htto_loggo"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny_http = "0.11"
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
file-rotate = "0.7.1"
http-auth-basic = "0.3.3"
htpasswd-verify = "0.2.1"
sd-notify = "0.4.1"
